[project]
name = "streamlit_AI_tools"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Foshan-hejialun", email = "121591889@qq.com"},
]
dependencies = ["streamlit>=1.48.0", "langchain>=0.3.27", "langchain-openai>=0.3.28", "pypdf>=5.9.0", "wikipedia>=1.4.0", "langchain-text-splitters>=0.3.9", "faiss-cpu>=1.11.0.post1", "langchainhub>=0.1.21", "langchain-experimental>=0.3.4", "pandas>=2.3.1", "tabulate>=0.9.0", "pip>=25.2"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
